src/objects/MT_AdvertisedMediaProduct__c.object
<CustomObject>
    <description>Produkte, die von externen Partnern oder Assets in Media Transparency beworben werden.</description>
    <fields>
        <fullName>MT_Account_ref__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Der Account, dem das Produkt zugeordnet ist. Alle Produkte eines Accounts (Opportunity -&gt; Account) stehen für dessen Kampagnen zur Verfügung.</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Advertised Media Products</relationshipLabel>
        <relationshipName>AdvertisedMediaProducts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MT_ProductNumber__c</fullName>
        <description>Die Produktnummer, die im Motivablagesystem verwendet wird.</description>
        <label>Product Number</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MT_SYS_AccountOwnerUnit__c</fullName>
        <description>Wird mittels Prozess befüllt, um das Sharing zu steuern.</description>
        <label>Account Owner Unit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Advertised Media Product</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Advertised Media Products</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>